Fixed about and description tablet view, add class to , added bottom spacing to 1000 for donate button 1000
Tablet - fixed the width of upload logo, add description, about us and
contact us text styling and position
1000 added bottom spacing to 1000 for donate button

--- a/html/css/bootstrap.css
+++ b/html/css/bootstrap.css
@@ -721,7 +721,7 @@ a.text-success:focus {
 }
 
 .text-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .text-right {
